# grpcproxy

./: .gitignore  Makefile  README.md  go.mod  go.sum  integration_test.go
backend/: backend.go
client/: client.go
cmd/backend/: main.go
cmd/proxy/: main.go
pb/: echo.pb.go  echo_grpc.pb.go  math.pb.go  math_grpc.pb.go
proto/: echo.proto  math.proto
proxy/: proxy.go
python/: Makefile  requirements.txt
python/cmd/: run_backend.py  run_client.py  run_proxy.py
python/grpcproxy/: backend.py  proxy.py  transparent_proxy.py
python/tests/: test_integration.py
rust/: Cargo.toml  Makefile  build.rs
rust/src/: backend.rs  lib.rs  proxy.rs  transparent_proxy.rs
rust/tests/: integration_test.rs
