[package]
name = "grpcproxy"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic = "0.12"
prost = "0.13"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
async-stream = "0.3"
hyper = { version = "1", features = ["server", "http2"] }
hyper-util = { version = "0.1", features = ["server-auto", "server-graceful", "http2", "tokio"] }
http = "1"
http-body = "1"
http-body-util = "0.1"
bytes = "1"
clap = { version = "4", features = ["derive"] }
tower = { version = "0.5", features = ["util"] }

[build-dependencies]
tonic-build = "0.12"

[[bin]]
name = "backend"
path = "src/bin/backend.rs"

[[bin]]
name = "proxy"
path = "src/bin/proxy.rs"

[[bin]]
name = "client"
path = "src/bin/client.rs"
